first section "intro"

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
-<section>
+<section class="intro">
+
+    <img src="images/landing-page/plant-2004483_1920.jpg" alt="plante">
+
+    <div class="intro-content">
+        <h2>S'adapter dans un contexte multi-projets
+            qui évolue en permanence</h2>
+        <a class="btn">Voir plus</a>
+    </div>
 
 </section>
