add sections to landing page (content & style)

--- a/index.html
+++ b/index.html
@@ -2,14 +2,184 @@
 layout: default
 ---
 
-<section class="intro">
+<section id="intro">
 
     <img src="images/landing-page/plant-2004483_1920.jpg" alt="plante">
 
     <div class="intro-content">
         <h2>S'adapter dans un contexte multi-projets
             qui évolue en permanence</h2>
-        <a class="btn">Voir plus</a>
+        <a href="#needs" class="btn roboto-text">Voir plus</a>
+    </div>
+
+</section>
+
+
+<section id="needs" class="container">
+
+    <h2>ASquared Consulting vous apporte des outils et des pratiques pour une gestion de projet sereine</h2>
+    <h3 class="condensed-text">Livrer à temps avec qualité les projets les plus importants pour votre entreprise</h3>
+    <div class="needs_items condensed-text">
+        <p>Vous vous retrouvez trop souvent dans des réunions improductives</p>
+        <p>Vous perdez votre temps à réaliser des activités chronophages à faible valeur ajoutée</p>
+        <p>Vos équipes sont démotivées et ont du mal à s'organiser</p>
+    </div>
+
+</section>
+
+
+<section id="solutions">
+
+    <div class="container">
+        <article class="solutions_item condensed-text">
+            <img src="/images/landing-page/compas%20-%20grey.png" alt="prioriser">
+            <p>Faites la différence entre <strong>vraies priorités</strong> et fausses urgences</p>
+        </article>
+
+        <article class="solutions_item condensed-text">
+            <img src="/images/landing-page/team-grey.png" alt="dynamique d'équipe">
+            <p>Mettez en place une <strong>dynamique d'équipe</strong></p>
+        </article>
+
+        <article class="solutions_item condensed-text">
+            <img src="/images/landing-page/engrenages%20-%20grey.png" alt="solutions">
+            <p>Trouvez des solutions pour <strong>simplifier</strong> et <strong>automatiser</strong></p>
+        </article>
+
+        <article class="solutions_item condensed-text">
+            <img src="/images/landing-page/team%20-%20gray.png" alt="apprendre">
+            <p>Apprenez à utiliser les bons <strong>outils</strong> et <strong>méthodes</strong></p>
+        </article>
+    </div>
+
+</section>
+
+<section id="experiment">
+
+    <div class="container">
+        <h2>Offre "Expérimenter des solutions en 6 jours"</h2>
+        <p>Vous êtes en charge d'un ou plusieurs projets, vous souhaitez mettre en place des améliorations.<br>
+            Identifions et co-construisons des solutions à vos problématiques.</p>
+        <div class="steps">
+            <div>
+                <p class="square">1</p>
+                <p>1 jour</p>
+                <h4>Immersion</h4>
+                <p>Analyse du contexte</p>
+            </div>
+            <div>
+                <p class="square">2</p>
+                <p>3/4 jours</p>
+                <h4>Ateliers/Coaching</h4>
+                <p>Identifier les problèmes et trouver des solutions</p>
+            </div>
+            <div>
+                <p class="square">3</p>
+                <p>1 jour</p>
+                <h4>Expérimentation & Feedback</h4>
+                <p>Implémentation des solutions</p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section id="simplify">
+
+    <div class="container">
+        <h2>Offre "Simplifier vos pratiques en 4 jours"</h2>
+        <p>Vous êtes en charge de réunions, d'animation d'équipe, de gestion d'activités projets, vous aspirez à plus d'efficacité, d'implication et une meilleure maîtrise de ces sujets.<br>
+            Construisons ensemble un programme de formation ou accompagnement sur mesure pour atteindre vos objectifs.</p>
+        <div class="steps">
+            <div>
+                <p class="square">1</p>
+                <p>1 jour</p>
+                <h4>Immersion/Discussion</h4>
+                <p>Analyse du contexte & définition des objectifs</p>
+            </div>
+            <div>
+                <p class="square">2</p>
+                <p>0,5 jour</p>
+                <h4>Choix des thèmes</h4>
+                <p>Restitution du diagnostic et choix des thèmes à adresser</p>
+            </div>
+            <div>
+                <p class="square">3</p>
+                <p>2,5 jours</p>
+                <h4>Formation/Coaching</h4>
+                <p>Avoir des outils et des connaissances pour simplifier les thèmes choisis</p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section id="bio">
+
+    <div class="container">
+        <div>
+            <h2>Valérie</h2>
+            <p>
+                Diplômée en Ingénierie Informatique, je débute en tant que développeuse informatique. J'intègre après quelques années <strong>Airbus</strong> Operations à Toulouse où je suis <strong>chef de projet</strong> informatique pour différents services pendant <strong>16 ans</strong>. Au sein d'Airbus je développe mes compétences de gestion de projet, d'animation d'équipes, d'améliorations de processus, d'accompagnement au changement et acquiert des savoir-faires dans les domaines Agile et Lean.
+            </p>
+            <p>
+                Un besoin de <strong>redonner du sens</strong> à mon activité professionnelle et une belle opportunité, m'ont donné l'impulsion pour quitter Airbus et prendre le statut de <strong>freelance</strong>.
+            </p>
+            <p>
+                Je crée <strong>ASquared Consulting</strong> avec la motivation de mettre mes compétences au service de collectivités locales, PME/PMI, associations afin d'avoir un <strong>impact positif local</strong>.
+            </p>
+        </div>
+        <div>
+            <img src="images/landing-page/IMG_20190531_135334_4.jpg" alt="Valérie">
+        </div>
+    </div>
+
+</section>
+
+<section id="collaborations">
+
+    <div class="container">
+        <h2>Nous avons collaboré</h2>
+        <div class="collaboration">
+            <div>
+                <img src="images/landing-page/Logo-Centieme-Singe-Tiers-Lieu.jpg" alt="Le 100eme Singe">
+            </div>
+            <div>
+                <h3>Le 100e singe</h3>
+                <h4>Amandine L.</h4>
+                <p>Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section id="exchanges">
+
+    <div class="container">
+        <h2>Echangeons sur vos besoins</h2>
+        <p>Vous êtes une entreprise, une association, un collectivité locale, contactez-moi...</p>
+        <div class="contact_links">
+            <div>
+                <img src="images/landing-page/mail%20-%20grey.png" alt="mail">
+            </div>
+            <div>
+                <img src="images/landing-page/linkedin%20-%20grey.png" alt="linkedin">
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section id="posts">
+
+    <div class="container">
+        <h2>Mes articles</h2>
+        <div>
+            <article>
+                include Jekyll?
+            </article>
+        </div>
     </div>
 
 </section>
