add sections to landing page (content & style)

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@ layout: default
 </section>
 
 
-<section id="needs" class="container">
+<section id="needs">
 
-    <h2>ASquared Consulting vous apporte des outils et des pratiques pour une gestion de projet sereine</h2>
-    <h3 class="condensed-text">Livrer à temps avec qualité les projets les plus importants pour votre entreprise</h3>
-    <div class="needs_items condensed-text">
-        <p>Vous vous retrouvez trop souvent dans des réunions improductives</p>
-        <p>Vous perdez votre temps à réaliser des activités chronophages à faible valeur ajoutée</p>
-        <p>Vos équipes sont démotivées et ont du mal à s'organiser</p>
+    <div class="container">
+        <h2>ASquared Consulting vous apporte des outils et des pratiques pour une gestion de projet sereine</h2>
+        <h3 class="condensed-text">Livrer à temps avec qualité les projets les plus importants pour votre entreprise</h3>
+        <div class="needs_items condensed-text">
+            <p>Vous vous retrouvez trop souvent dans des réunions improductives</p>
+            <p>Vous perdez votre temps à réaliser des activités chronophages à faible valeur ajoutée</p>
+            <p>Vos équipes sont démotivées et ont du mal à s'organiser</p>
+        </div>
     </div>
 
 </section>
@@ -58,9 +60,9 @@ layout: default
 
     <div class="container">
         <h2>Offre "Expérimenter des solutions en 6 jours"</h2>
-        <p>Vous êtes en charge d'un ou plusieurs projets, vous souhaitez mettre en place des améliorations.<br>
+        <p class="condensed-text">Vous êtes en charge d'un ou plusieurs projets, vous souhaitez mettre en place des améliorations.<br>
             Identifions et co-construisons des solutions à vos problématiques.</p>
-        <div class="steps">
+        <div class="steps roboto-text">
             <div>
                 <p class="square">1</p>
                 <p>1 jour</p>
@@ -85,12 +87,11 @@ layout: default
 </section>
 
 <section id="simplify">
-
     <div class="container">
         <h2>Offre "Simplifier vos pratiques en 4 jours"</h2>
-        <p>Vous êtes en charge de réunions, d'animation d'équipe, de gestion d'activités projets, vous aspirez à plus d'efficacité, d'implication et une meilleure maîtrise de ces sujets.<br>
+        <p class="condensed-text">Vous êtes en charge de réunions, d'animation d'équipe, de gestion d'activités projets, vous aspirez à plus d'efficacité, d'implication et une meilleure maîtrise de ces sujets.<br>
             Construisons ensemble un programme de formation ou accompagnement sur mesure pour atteindre vos objectifs.</p>
-        <div class="steps">
+        <div class="steps roboto-text">
             <div>
                 <p class="square">1</p>
                 <p>1 jour</p>
@@ -141,13 +142,13 @@ layout: default
     <div class="container">
         <h2>Nous avons collaboré</h2>
         <div class="collaboration">
-            <div>
+            <div class="collaboration-img">
                 <img src="images/landing-page/Logo-Centieme-Singe-Tiers-Lieu.jpg" alt="Le 100eme Singe">
             </div>
-            <div>
-                <h3>Le 100e singe</h3>
-                <h4>Amandine L.</h4>
-                <p>Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
+            <div class="collaboration-text">
+                <h3 class="condensed-text">Le 100e singe</h3>
+                <h4 class="roboto-text">Amandine L.</h4>
+                <p class="roboto-text">Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
             </div>
         </div>
     </div>
@@ -158,13 +159,17 @@ layout: default
 
     <div class="container">
         <h2>Echangeons sur vos besoins</h2>
-        <p>Vous êtes une entreprise, une association, un collectivité locale, contactez-moi...</p>
+        <p class="condensed-text">Vous êtes une entreprise, une association, un collectivité locale, contactez-moi...</p>
         <div class="contact_links">
             <div>
-                <img src="images/landing-page/mail%20-%20grey.png" alt="mail">
+                <a href="mailto:valerie@a2consulting.io" target="_blank">
+                    <img src="images/landing-page/mail%20-%20grey.png" alt="mail">
+                </a>
             </div>
             <div>
-                <img src="images/landing-page/linkedin%20-%20grey.png" alt="linkedin">
+                <a href="https://www.linkedin.com/in/val%C3%A9rie-ferrer-63a3b89/" target="_blank">
+                    <img src="images/landing-page/linkedin%20-%20grey.png" alt="linkedin">
+                </a>
             </div>
         </div>
     </div>
