update style of 'simplify' & 'experiment' sections

--- a/index.html
+++ b/index.html
@@ -64,20 +64,28 @@ layout: default
             Identifions et co-construisons des solutions à vos problématiques.</p>
         <div class="steps roboto-text">
             <div>
-                <p class="square">1</p>
-                <p>1 jour</p>
+                <div class="square_box">
+                    <p class="square">1</p>
+                    <div class="square_linker"></div>
+                </div>
+                <p class="condensed-text">1 jour</p>
                 <h4>Immersion</h4>
                 <p>Analyse du contexte</p>
             </div>
             <div>
-                <p class="square">2</p>
-                <p>3/4 jours</p>
+                <div class="square_box">
+                    <p class="square">2</p>
+                    <div class="square_linker"></div>
+                </div>
+                <p class="condensed-text">3/4 jours</p>
                 <h4>Ateliers/Coaching</h4>
                 <p>Identifier les problèmes et trouver des solutions</p>
             </div>
             <div>
-                <p class="square">3</p>
-                <p>1 jour</p>
+                <div class="square_box">
+                    <p class="square">3</p>
+                </div>
+                <p class="condensed-text">1 jour</p>
                 <h4>Expérimentation & Feedback</h4>
                 <p>Implémentation des solutions</p>
             </div>
@@ -93,20 +101,28 @@ layout: default
             Construisons ensemble un programme de formation ou accompagnement sur mesure pour atteindre vos objectifs.</p>
         <div class="steps roboto-text">
             <div>
-                <p class="square">1</p>
-                <p>1 jour</p>
+                <div class="square_box">
+                    <p class="square">1</p>
+                    <div class="square_linker"></div>
+                </div>
+                <p class="condensed-text">1 jour</p>
                 <h4>Immersion/Discussion</h4>
                 <p>Analyse du contexte & définition des objectifs</p>
             </div>
             <div>
-                <p class="square">2</p>
-                <p>0,5 jour</p>
+                <div class="square_box">
+                    <p class="square">2</p>
+                    <div class="square_linker"></div>
+                </div>
+                <p class="condensed-text">0,5 jour</p>
                 <h4>Choix des thèmes</h4>
                 <p>Restitution du diagnostic et choix des thèmes à adresser</p>
             </div>
             <div>
-                <p class="square">3</p>
-                <p>2,5 jours</p>
+                <div class="square_box">
+                    <p class="square">3</p>
+                </div>
+                <p class="condensed-text">2,5 jours</p>
                 <h4>Formation/Coaching</h4>
                 <p>Avoir des outils et des connaissances pour simplifier les thèmes choisis</p>
             </div>
@@ -119,7 +135,7 @@ layout: default
 
     <div class="container">
         <div>
-            <h2>Valérie</h2>
+            <h2 class="condensed-text">Valérie</h2>
             <p>
                 Diplômée en Ingénierie Informatique, je débute en tant que développeuse informatique. J'intègre après quelques années <strong>Airbus</strong> Operations à Toulouse où je suis <strong>chef de projet</strong> informatique pour différents services pendant <strong>16 ans</strong>. Au sein d'Airbus je développe mes compétences de gestion de projet, d'animation d'équipes, d'améliorations de processus, d'accompagnement au changement et acquiert des savoir-faires dans les domaines Agile et Lean.
             </p>
@@ -182,7 +198,7 @@ layout: default
         <h2>Mes articles</h2>
         <div>
             <article>
-                include Jekyll?
+                todo : include via Jekyll
             </article>
         </div>
     </div>
