set responsive rules

--- a/index.html
+++ b/index.html
@@ -68,26 +68,32 @@ layout: default
                     <p class="square">1</p>
                     <div class="square_linker"></div>
                 </div>
-                <p class="condensed-text">1 jour</p>
-                <h4>Immersion</h4>
-                <p>Analyse du contexte</p>
+                <div class="step_text">
+                    <p class="condensed-text">1 jour</p>
+                    <h4>Immersion</h4>
+                    <p>Analyse du contexte</p>
+                </div>
             </div>
             <div>
                 <div class="square_box">
                     <p class="square">2</p>
                     <div class="square_linker"></div>
                 </div>
-                <p class="condensed-text">3/4 jours</p>
-                <h4>Ateliers/Coaching</h4>
-                <p>Identifier les problèmes et trouver des solutions</p>
+                <div class="step_text">
+                    <p class="condensed-text">3/4 jours</p>
+                    <h4>Ateliers/Coaching</h4>
+                    <p>Identifier les problèmes et trouver des solutions</p>
+                </div>
             </div>
             <div>
                 <div class="square_box">
                     <p class="square">3</p>
                 </div>
-                <p class="condensed-text">1 jour</p>
-                <h4>Expérimentation & Feedback</h4>
-                <p>Implémentation des solutions</p>
+                <div class="step_text">
+                    <p class="condensed-text">1 jour</p>
+                    <h4>Expérimentation & Feedback</h4>
+                    <p>Implémentation des solutions</p>
+                </div>
             </div>
         </div>
     </div>
@@ -105,26 +111,32 @@ layout: default
                     <p class="square">1</p>
                     <div class="square_linker"></div>
                 </div>
-                <p class="condensed-text">1 jour</p>
-                <h4>Immersion/Discussion</h4>
-                <p>Analyse du contexte & définition des objectifs</p>
+                <div class="step_text">
+                    <p class="condensed-text">1 jour</p>
+                    <h4>Immersion/Discussion</h4>
+                    <p>Analyse du contexte & définition des objectifs</p>
+                </div>
             </div>
             <div>
                 <div class="square_box">
                     <p class="square">2</p>
                     <div class="square_linker"></div>
                 </div>
-                <p class="condensed-text">0,5 jour</p>
-                <h4>Choix des thèmes</h4>
-                <p>Restitution du diagnostic et choix des thèmes à adresser</p>
+                <div class="step_text">
+                    <p class="condensed-text">0,5 jour</p>
+                    <h4>Choix des thèmes</h4>
+                    <p>Restitution du diagnostic et choix des thèmes à adresser</p>
+                </div>
             </div>
             <div>
                 <div class="square_box">
                     <p class="square">3</p>
                 </div>
-                <p class="condensed-text">2,5 jours</p>
-                <h4>Formation/Coaching</h4>
-                <p>Avoir des outils et des connaissances pour simplifier les thèmes choisis</p>
+                <div class="step_text">
+                    <p class="condensed-text">2,5 jours</p>
+                    <h4>Formation/Coaching</h4>
+                    <p>Avoir des outils et des connaissances pour simplifier les thèmes choisis</p>
+                </div>
             </div>
         </div>
     </div>
