--- a/cgu.html
+++ b/cgu.html
@@ -13,4 +13,7 @@ layout: default
         Numéro de TVA : FR 83893480442 <br>
         Hébergeur : Github Pages
     </p>
+    <div class="cgu-block-btn">
+        <a href="/index.html" class="btn roboto-text">Retour</a>
+    </div>
 </section>
