--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ layout: default
     <div class="intro-content">
         <h2>S'adapter dans un contexte multi-projets
             qui évolue en permanence</h2>
-        <a href="#needs" class="btn roboto-text">Voir plus</a>
+        <a href="#anchor" class="btn roboto-text">Voir plus</a>
     </div>
 
 </section>
 
 
 <section id="needs">
-
+    <div id="anchor"></div>
     <div class="container">
         <h2>ASquared Consulting vous apporte des outils et des pratiques pour une gestion de projet sereine</h2>
         <h3 class="condensed-text">Livrer à temps avec qualité les projets les plus importants pour votre entreprise</h3>
