add post navigation (excerpts in index and post-list

--- a/_posts/2021-03-11-Premier-Article.html
+++ b/_posts/2021-03-11-Premier-Article.html
@@ -3,14 +3,14 @@ layout: post
 title: "Le team leader, le coach bienveillant de l’équipe ? "
 header-image: "/images/landing-page/plant-2004483_1920.jpg"
 permalink: "/article"
+excerpt_separator: <!--more-->
 ---
 
 
 <p>Je viens de quitter mon emploi salarié pour me lancer dans l’entreprenariat.
-
     Après 16 ans de vie professionnelle avec et dans des équipes dans une grosse entreprise, je pose ici une petite
     réflexion sur les équipes et plus particulièrement le team leader. J’ai à la fois été et eu des team leaders.
-
+<!--more-->
     Voici ce que je retiens d’essentiel pour être un un bon team leader….</p>
 
 <h3>L’humain est au centre</h3>
