--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: '/'
 ---
 
 <section id="intro">
@@ -209,10 +210,24 @@ layout: default
     <div class="container">
         <h2>Mes articles</h2>
         <div>
-            <article>
-                todo : include via Jekyll
-            </article>
+            <ul>
+                {% for post in site.posts %}
+                   {% if forloop.index < 4 %}
+                    <li>
+                        <article class="postExcerpt">
+                        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                        <div class="postDate">
+                            <p>Posté le {{ post.date | date: "%d / %m / %Y" }}</p>
+                        </div>
+                        <img src="{{ post.header-image }}" alt="illustration" class="smallPostImage">
+                        <p>{{ post.excerpt }}</p>
+                        </article>
+                    </li>
+                  {% endif %}
+                {% endfor %}
+              </ul>
         </div>
+        <a href="/post-list.html">Voir tous les articles</a>
     </div>
 
 </section>
