update post-list page template and set style

--- a/_posts/2021-03-11-Premier-Article.html
+++ b/_posts/2021-03-11-Premier-Article.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Le team leader, le coach bienveillant de l’équipe ? "
-header-image: "/images/landing-page/plant-2004483_1920.jpg"
+header-image: "/images/posts/img2.jpg"
 permalink: "/article"
 excerpt_separator: <!--more-->
 ---
