--- a/post-list.html
+++ b/post-list.html
@@ -2,23 +2,34 @@
 layout: default
 ---
 
+<!-- inspiration : https://blog.nicolas.brondin-bernard.com/les-collections/ -->
+
 <div class="postListPage">
   <h2>Mes articles</h2>
-
+  <p>Retrouvez ici les articles sur lesquels je travaille pour aborder un sujet en profondeur :</p>
   <ul>
     {% for post in site.posts %}
       <li>
-        <article>
-          <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-          <div class="postDate">
-            <p>Posté le {{ post.date | date: "%d / %m / %Y" }}</p>
-          </div>
-          <img src="{{ post.header-image }}" alt="illustration" class="smallPostImage">
-          <p>{{ post.excerpt }}</p>
-        </article>
+        <a href="{{ post.url }}">
+          <article>
+            <div class="postListPage__articleDescription">
+              <div>
+                <h3>{{ post.title }}</h3>
+                <p>{{ post.excerpt }}</p>
+              </div>
+              <div><small>Posté le {{ post.date | date: "%d / %m / %Y" }}</small></div>
+            </div>
+
+            {% if post.header-image %}
+            <div class="postListPage__articleImage">
+              <img src="{{ post.header-image }}" alt="illustration">
+            </div>
+            {% endif %}
+          </article>
+        </a>
       </li>
     {% endfor %}
   </ul>
 
-  <a href="/index.html" class="postBtn">Retour au site</a>
+  <a href="/index.html" class="postBtn btn">Retour au site</a>
 </div>
