--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ permalink: '/'
                                 <img src="{{ post.header-image }}" alt="illustration" class="fullWidthImage">
                             </div>
                             <h3 class="condensed-text"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-                            <p>Le {{ post.date | date: "%d / %m / %Y" }}</p>   
+                            <p>{{ post.date | date: "%d / %m / %Y" }}</p>
                         </article>
                     </li>
                   {% endif %}
