--- a/post-list.html
+++ b/post-list.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="postListPage">
   <h2>Mes articles</h2>
-  <p>Retrouvez ici les articles sur lesquels je travaille pour aborder un sujet en profondeur :</p>
+  <p class="roboto-text">Retrouvez ici les articles sur lesquels je travaille pour aborder un sujet en profondeur :</p>
   <ul>
     {% for post in site.posts %}
       <li>
@@ -17,7 +17,7 @@ layout: default
                 <h3>{{ post.title }}</h3>
                 <p>{{ post.excerpt }}</p>
               </div>
-              <div><small>Posté le {{ post.date | date: "%d / %m / %Y" }}</small></div>
+              <div class="postDateWithClock"><img src="images/clock-regular.svg" class="clockImg"><small>Posté le {{ post.date | date: "%d / %m / %Y" }}</small></div>
             </div>
 
             {% if post.header-image %}
@@ -30,6 +30,7 @@ layout: default
       </li>
     {% endfor %}
   </ul>
-
-  <a href="/index.html" class="postBtn btn">Retour au site</a>
+  <div class="btnBloc">
+    <a href="/index.html" class="postBtn btn">Retour au site</a>
+  </div>
 </div>
