--- a/index.html
+++ b/index.html
@@ -214,13 +214,15 @@ permalink: '/'
                 {% for post in site.posts %}
                    {% if forloop.index < 4 %}
                     <li>
-                        <article>
-                            <div>
-                                <img src="{{ post.header-image }}" alt="illustration" class="fullWidthImage">
-                            </div>
-                            <h3 class="condensed-text"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-                            <p>{{ post.date | date: "%d / %m / %Y" }}</p>
-                        </article>
+                        <a href="{{ post.url }}">
+                            <article>
+                                <div>
+                                    <img src="{{ post.header-image }}" alt="illustration" class="fullWidthImage">
+                                </div>
+                                <h3 class="condensed-text">{{ post.title }}</h3>
+                                <p>{{ post.date | date: "%d / %m / %Y" }}</p>
+                            </article>
+                        </a>
                     </li>
                   {% endif %}
                 {% endfor %}
