update landing style & ancors, write correctly article 1 & cleaning, meta og tags

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@ permalink: '/'
 ---
 
 <section id="intro">
-
     <img src="images/landing-page/plant-2004483_1920.jpg" alt="plante">
-
     <div class="intro-content">
         <h2>S'adapter dans un contexte multi-projets
             qui évolue en permanence</h2>
-        <a href="#anchor" class="btn roboto-text">Voir plus</a>
+        <div class="btn-group">
+            <a href="#more" class="btn roboto-text">Voir plus</a>
+            <a href="#offers" class="btn roboto-text">Accompagnements</a>
+            <!-- <a href="#anchor2" class="btn roboto-text">Formations</a> -->
+            <a href="#blog" class="btn roboto-text">Blog</a>
+        </div>
     </div>
-
 </section>
 
 
 <section id="needs">
-    <div id="anchor"></div>
+    <div id="more" class="anchor"></div>
     <div class="container">
         <h2>ASquared Consulting vous apporte des outils et des pratiques pour une gestion de projet sereine</h2>
         <h3 class="condensed-text">Livrer à temps avec qualité les projets les plus importants pour votre entreprise</h3>
@@ -27,12 +29,10 @@ permalink: '/'
             <p>Vos équipes sont démotivées et ont du mal à s'organiser</p>
         </div>
     </div>
-
 </section>
 
 
 <section id="solutions">
-
     <div class="container">
         <article class="solutions_item condensed-text">
             <img src="/images/landing-page/compas%20-%20grey.png" alt="prioriser">
@@ -54,11 +54,10 @@ permalink: '/'
             <p>Apprenez à utiliser les bons <strong>outils</strong> et <strong>méthodes</strong></p>
         </article>
     </div>
-
 </section>
 
 <section id="experiment">
-
+    <div id="offers" class="anchor"></div>
     <div class="container">
         <h2>Offre "Expérimenter des solutions en 6 jours"</h2>
         <p class="condensed-text">Vous êtes en charge d'un ou plusieurs projets, vous souhaitez mettre en place des améliorations.<br>
@@ -98,7 +97,6 @@ permalink: '/'
             </div>
         </div>
     </div>
-
 </section>
 
 <section id="simplify">
@@ -141,11 +139,9 @@ permalink: '/'
             </div>
         </div>
     </div>
-
 </section>
 
 <section id="bio">
-
     <div class="container">
         <div>
             <h2 class="condensed-text">Valérie</h2>
@@ -163,11 +159,9 @@ permalink: '/'
             <img src="images/landing-page/IMG_20190531_135334_4.jpg" alt="Valérie">
         </div>
     </div>
-
 </section>
 
 <section id="collaborations">
-
     <div class="container">
         <h2>Nous avons collaboré</h2>
         <div class="collaboration">
@@ -180,12 +174,21 @@ permalink: '/'
                 <p class="roboto-text">Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
             </div>
         </div>
+        <!-- <div class="collaboration">
+            <div class="collaboration-text text-right">
+                <h3 class="condensed-text">Le 100e singe</h3>
+                <h4 class="roboto-text">Amandine L.</h4>
+                <p class="roboto-text">Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
+            </div>
+            <div class="collaboration-img">
+                <img src="images/landing-page/Logo-Centieme-Singe-Tiers-Lieu.jpg" alt="Le 100eme Singe">
+            </div>
+        </div> -->
     </div>
 
 </section>
 
 <section id="exchanges">
-
     <div class="container">
         <h2>Echangeons sur vos besoins</h2>
         <p class="condensed-text">Vous êtes une entreprise, une association, un collectivité locale, contactez-moi...</p>
@@ -202,11 +205,10 @@ permalink: '/'
             </div>
         </div>
     </div>
-
 </section>
 
 <section id="posts">
-
+    <div id="blog" class="anchor"></div>
     <div class="container">
         <h2>Mes articles</h2>
         <div>
@@ -230,5 +232,4 @@ permalink: '/'
         </div>
         <a class="btn postBtn" href="/post-list.html">Voir tous les articles</a>
     </div>
-
 </section>
