change btn style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ permalink: '/'
         <h2>S'adapter dans un contexte multi-projets
             qui évolue en permanence</h2>
         <div class="btn-group">
-            <a href="#more" class="btn roboto-text">Voir plus</a>
+            <a href="#more" class="btn btn-black roboto-text">Voir plus</a>
             <a href="#offers" class="btn roboto-text">Accompagnements</a>
             <!-- <a href="#anchor2" class="btn roboto-text">Formations</a> -->
             <a href="#blog" class="btn roboto-text">Blog</a>
