add formation anchor

--- a/formation.html
+++ b/formation.html
@@ -14,6 +14,7 @@ layout: default
         <div class="formation_intro_numbers">
             <p>80% <br>de pratique</p>
             <p>6 <br>jours</p>
+            <p>8 <br>participants</p>
         </div>
         <hr>
         <div class="formation_intro_links">
@@ -91,7 +92,8 @@ layout: default
             </div>
         </article>
     </section>   
-    <section id="nextDates" class="container formation_dates">
+    <section class="container formation_dates">
+        <div id="nextDates" class="anchor"></div>
         <h2>Proposition de dates</h3>
         <div>
             <p>Dates à venir</p>
