add responsive rules to formation page

--- a/formation.html
+++ b/formation.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="formation container">
-    <section class="container formation_intro">
+    <section class="formation_intro">
         <h2>Formation à la gestion de projet : <br>les fondamentaux</h2>
         <hr>
         <div>
@@ -23,7 +23,7 @@ layout: default
         </div>
     </section>
 
-    <section class="container formation_target">
+    <section class="formation_target">
         <h2>Public cible</h3>
         <div>
             <div>
@@ -50,7 +50,7 @@ layout: default
         </div>
     </section>
     
-    <section class="container formation_content">
+    <section class="formation_content">
         <h2>Description de la formation</h2>
         <article>
             <h3>Objectifs pédagogiques</h3>
@@ -92,7 +92,7 @@ layout: default
             </div>
         </article>
     </section>   
-    <section class="container formation_dates">
+    <section class="formation_dates">
         <div id="nextDates" class="anchor"></div>
         <h2>Proposition de dates</h3>
         <div>
@@ -102,5 +102,8 @@ layout: default
             </div>
         </div>
     </section> 
+    <div class="btnBloc">
+        <a href="/index.html" class="postBtn btn">Retour</a>
+    </div>
 </div>
 
