add formation section to homepage

--- a/index.html
+++ b/index.html
@@ -141,6 +141,23 @@ permalink: '/'
     </div>
 </section>
 
+<section id="formation">
+    <div class="container">
+        <div>
+            <h2 class="condensed-text">Formation</h2>
+            <p>
+                Diplômée en Ingénierie Informatique, je débute en tant que développeuse informatique. J'intègre après quelques années <strong>Airbus</strong> Operations à Toulouse où je suis <strong>chef de projet</strong> informatique pour différents services pendant <strong>16 ans</strong>. Au sein d'Airbus je développe mes compétences de gestion de projet, d'animation d'équipes, d'améliorations de processus, d'accompagnement au changement et acquiert des savoir-faires dans les domaines Agile et Lean.
+            </p>
+            <p>
+                Un besoin de <strong>redonner du sens</strong> à mon activité professionnelle et une belle opportunité, m'ont donné l'impulsion pour quitter Airbus et prendre le statut de <strong>freelance</strong>.
+            </p>
+            <p>
+                Je crée <strong>ASquared Consulting</strong> avec la motivation de mettre mes compétences au service de collectivités locales, PME/PMI, associations afin d'avoir un <strong>impact positif local</strong>.
+            </p>
+        </div>
+    </div>
+</section>
+
 <section id="bio">
     <div class="container">
         <div>
