--- a/formation.html
+++ b/formation.html
@@ -27,7 +27,7 @@ layout: default
         <h2>Public cible</h3>
         <div>
             <div>
-                <img src="images/formation/Information flow_Flatline.png" class="formation_target_image">
+                <img src="images/formation/Consulting_Flatline.png" class="formation_target_image">
                 <div class="formation_target_text">
                     <h3>Chef de projet</h3>
                     <p>pour améliorer leur vision</p>
