--- a/formation.html
+++ b/formation.html
@@ -53,9 +53,17 @@ layout: default
     <section class="formation_content">
         <h2>Description de la formation</h2>
         <article>
-            <h3>Objectifs pédagogiques</h3>
+            <h3>Modules</h3>
             <div class="formation_content_goals">
-                <p>Maîtriser les fondamentaux de la gestion de projet (phase de conception, pilotage et capitalisation). </p>
+                <p>1 - Maîtriser les fondamentaux de la gestion de projet (phase de conception, pilotage et capitalisation).</p>
+                <p>2 - Acquérir les méthodologies & outils de la gestion de projet.</p>
+            </div>
+        </article>
+        <article>
+            <h3>Objectifs pédagogiques</h3>
+            <!-- colonnes ? -->
+            <div>
+                <p>1 - Maîtriser les fondamentaux de la gestion de projet (phase de conception, pilotage et capitalisation).</p>
                 <p>Acquérir les méthodologies & outils de la gestion de projet.</p>
             </div>
         </article>
