--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@ permalink: '/'
             <div class="collaboration-text">
                 <h3 class="condensed-text">Le 100e singe</h3>
                 <h4 class="roboto-text">Amandine L.</h4>
-                <p class="roboto-text">Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
+                <p class="roboto-text">" Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement. "</p>
             </div>
         </div>
         <!-- <div class="collaboration">
             <div class="collaboration-text text-right">
                 <h3 class="condensed-text">Le 100e singe</h3>
                 <h4 class="roboto-text">Amandine L.</h4>
-                <p class="roboto-text">Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement.</p>
+                <p class="roboto-text">"Valérie est intervenue auprès du 100e Singe pour élaborer un outil de gestion des risques adapté à des problématiques de pilotage de projet d'innovation sociale au sein d'un collectivité. J'ai beaucoup apprécié son professionnalisme, ses compétences pointues de gestion de projet et gestion des risques mises au service de thématique d'innovation sociale. Elle a su identifier le besoin, proposer un outil très adapté, simple et intuitif, et être pédagogue sur la transmission de son utilisation. Je la recommande vivement."</p>
             </div>
             <div class="collaboration-img">
                 <img src="images/landing-page/Logo-Centieme-Singe-Tiers-Lieu.jpg" alt="Le 100eme Singe">
