--- a/index.html
+++ b/index.html
@@ -143,17 +143,30 @@ permalink: '/'
 
 <section id="formation">
     <div class="container">
+        <h2>Formations</h2>
         <div>
-            <h2 class="condensed-text">Formation</h2>
-            <p>
-                Diplômée en Ingénierie Informatique, je débute en tant que développeuse informatique. J'intègre après quelques années <strong>Airbus</strong> Operations à Toulouse où je suis <strong>chef de projet</strong> informatique pour différents services pendant <strong>16 ans</strong>. Au sein d'Airbus je développe mes compétences de gestion de projet, d'animation d'équipes, d'améliorations de processus, d'accompagnement au changement et acquiert des savoir-faires dans les domaines Agile et Lean.
-            </p>
-            <p>
-                Un besoin de <strong>redonner du sens</strong> à mon activité professionnelle et une belle opportunité, m'ont donné l'impulsion pour quitter Airbus et prendre le statut de <strong>freelance</strong>.
-            </p>
-            <p>
-                Je crée <strong>ASquared Consulting</strong> avec la motivation de mettre mes compétences au service de collectivités locales, PME/PMI, associations afin d'avoir un <strong>impact positif local</strong>.
-            </p>
+            <article>
+                <h3>Gestion de projet</h3>
+                <p>pour membres d'équipe, chefs de projet & étudiants</p>
+                <p class="time">5 jours</p>
+                <a href="/formations/gestion-de-projet.html" class="btn">En savoir plus</a>
+            </article>
+
+            <article>
+                <p>D'autres formations à venir</p>
+            </article>
+            <!--<article>
+                <h3>Outils numériques</h3>
+                <p>pour membres d'équipe, chefs de projet & étudiants</p>
+                <p class="time">5 jours</p>
+                <a href="#" class="btn">En savoir plus</a>
+            </article>
+            <article>
+                <h3>Efficacité</h3>
+                <p>pour membres d'équipe, chefs de projet & étudiants</p>
+                <p class="time">5 jours</p>
+                <a href="#" class="btn">En savoir plus</a>
+            </article> -->
         </div>
     </div>
 </section>
